update (idk what write to this commit)

--- a/note/note.tex
+++ b/note/note.tex
@@ -18,6 +18,18 @@
 
 	\input{sections/01_03_task_setting}
 
+	\input{sections/02_01_design_db}
+
+	\input{sections/03_01_development}
+
+	\input{sections/03_02_development}
+
+	\input{sections/03_03_development}
+
+	\input{sections/03_04_instruction}
+
 	\input{sections/10_conclusion}
+
+	\input{sections/11_list_of_refs}
 
 \end{document}
