--- a/note/sections/01_02_analogues.tex
+++ b/note/sections/01_02_analogues.tex
@@ -17,7 +17,7 @@
 \end{itemize}
 Оптимальность полученного функционала позволит сократить расходы на разработку и внедрение.
 
-\textbf{1.2.1}\hphantom{22}Крупные агрегаторы и студии, такие как \textit{Studia3D}, часто предлагают широкий выбор услуг, включая не только печать, но и 3D-сканирование, моделирование и продажу оборудования. Их онлайн-порталы используют комплексный подход для распространения информации.
+Крупные агрегаторы и студии, такие как \textit{Studia3D}, часто предлагают широкий выбор услуг, включая не только печать, но и 3D-сканирование, моделирование и продажу оборудования. Их онлайн-порталы используют комплексный подход для распространения информации.
 На рисунке \ref{fig:studia3d_homepage} представлена главная страница портала \textit{Studia3D}.
  
 \begin{figure}[H]
@@ -33,7 +33,7 @@
 
 Сайт пользуется популярностью в регионе за счет бренда и энциклопедического контента. Однако сложность интерфейса и обилие лишней информации следует учесть при проектировании более грамотного и лаконичного интерфейса собственной АИС.
 
-\textbf{1.2.2}\hphantom{22}Сайт сервиса \textit{CanTouch}, специализирующегося на промышленной и частной \textit{3D}-печати, акцентирует внимание на простоте онлайн-расчета. Интерфейс сайта приведен на рисунке \ref{fig:cantouch_homepage}.
+Сайт сервиса \textit{CanTouch}, специализирующегося на промышленной и частной \textit{3D}-печати, акцентирует внимание на простоте онлайн-расчета. Интерфейс сайта приведен на рисунке \ref{fig:cantouch_homepage}.
 
 \begin{figure}[H]
     \centering
@@ -61,7 +61,7 @@
 
 Однако данный сервис ориентирован исключительно на клиента («фронтенд»). В нем скрыта внутренняя кухня: клиент не видит, какой конкретно принтер будет печатать его деталь, и не может отследить историю списания материалов. Для целей данного курсового проекта, где требуется управление сотрудниками, оборудованием и аналитикой, функционала только «витрины» недостаточно.
 
-\textbf{1.2.3}\hphantom{22}Сайт-производитель профессионального управляющего ПО, предлагающий комплексное \textit{B2B}-решение для управления 3D-фермами и производством, предоставляется компанией \textit{DigiFabster}. Интерфейс системы приведен на рисунке \ref{fig:digi_homepage}.
+Сайт-производитель профессионального управляющего ПО, предлагающий комплексное \textit{B2B}-решение для управления 3D-фермами и производством, предоставляется компанией \textit{DigiFabster}. Интерфейс системы приведен на рисунке \ref{fig:digi_homepage}.
 
 Данная система соответствует современным стандартам \textit{CRM} и \textit{ERP} для аддитивного производства. Имеются вкладки под аналитику продаж, управление очередью печати (\textit{Order Queue}), складской учет филамента и мониторинг принтеров.
 
