--- a/note/sections/10_conclusion.tex
+++ b/note/sections/10_conclusion.tex
@@ -17,4 +17,4 @@
 
 Полученные в ходе выполнения работы практические навыки в проектировании архитектуры клиент-серверного приложения, работе с современным стеком технологий (\textit{Kotlin}, \textit{React}, \textit{TypeScript}) и управлении реляционными данными имеют высокую значимость и могут быть востребованы при решении аналогичных задач в профессиональной деятельности.
 
-Пояснительная записка оформлена в соответствии с требованиями стандарта предприятия.
+Пояснительная записка оформлена в соответствии с требованиями стандарта предприятия [3].
