--- a/note/task.tex
+++ b/note/task.tex
@@ -68,6 +68,8 @@
 
 \uline{3. Разработка АИС студии 3\textit{D}-печати\hfill}
 
+\uline{4. Инструкция пользователя\hfill}
+
 \uline{Заключение\hfill}
 
 \uline{Список использованных источников\hfill}
