--- a/note/title.tex
+++ b/note/title.tex
@@ -19,7 +19,7 @@
     {ПОЯСНИТЕЛЬНАЯ ЗАПИСКА}\\
     {к курсовой работе}\\
     {на тему}\\[1em]
-    \MakeUppercase{Автоматизированная информационная система студии 3\textit{D}-печати}\\[1em]
+    \MakeUppercase{Автоматизированная информационная система студии \textit{3D}-печати}\\[1em]
     {БГУИР  КР 6-o7-1337-69 420}\\
         \vfill
     \begin{tabular}{ p{0.65\textwidth}p{0.25\textwidth} }
