--- a/note/note.tex
+++ b/note/note.tex
@@ -20,6 +20,8 @@
 
 	\input{sections/02_01_design_db}
 
+	\input{sections/02_02_design_app}
+
 	\input{sections/03_01_development}
 
 	\input{sections/03_02_development}
