--- a/note/sections/01_02_analogues.tex
+++ b/note/sections/01_02_analogues.tex
@@ -15,9 +15,13 @@
     \item функционал для сотрудников по списанию материала и смене статусов заказов;
     \item аналитическая панель (\textit{dashboard}) для роли Аналитика, отображающая статистику и графики.
 \end{itemize}
+
 Оптимальность полученного функционала позволит сократить расходы на разработку и внедрение.
 
+\subsubsection{} Обзор сайта \textit{Studia3D}
+
 Крупные агрегаторы и студии, такие как \textit{Studia3D}, часто предлагают широкий выбор услуг, включая не только печать, но и 3D-сканирование, моделирование и продажу оборудования. Их онлайн-порталы используют комплексный подход для распространения информации.
+
 На рисунке \ref{fig:studia3d_homepage} представлена главная страница портала \textit{Studia3D}.
  
 \begin{figure}[H]
@@ -32,6 +36,8 @@
 Отсутствие строгого фокуса на процессе «заказ – печать», характерное для маркетплейсов, может порождать ряд проблем для локальной студии. Избыточные формы обратной связи, всплывающие окна консультантов и смешивание услуг печати с интернет-магазином товаров могут способствовать снижению качества пользовательского опыта (\textit{UX}) для постоянного клиента, которому важна скорость оформления.
 
 Сайт пользуется популярностью в регионе за счет бренда и энциклопедического контента. Однако сложность интерфейса и обилие лишней информации следует учесть при проектировании более грамотного и лаконичного интерфейса собственной АИС.
+
+\subsubsection{} Обзор сайта \textit{CanTouch}
 
 Сайт сервиса \textit{CanTouch}, специализирующегося на промышленной и частной \textit{3D}-печати, акцентирует внимание на простоте онлайн-расчета. Интерфейс сайта приведен на рисунке \ref{fig:cantouch_homepage}.
 
@@ -61,6 +67,8 @@
 
 Однако данный сервис ориентирован исключительно на клиента («фронтенд»). В нем скрыта внутренняя кухня: клиент не видит, какой конкретно принтер будет печатать его деталь, и не может отследить историю списания материалов. Для целей данного курсового проекта, где требуется управление сотрудниками, оборудованием и аналитикой, функционала только «витрины» недостаточно.
 
+\subsubsection{} Обзор сайта \textit{DigiFabster}
+
 Сайт-производитель профессионального управляющего ПО, предлагающий комплексное \textit{B2B}-решение для управления 3D-фермами и производством, предоставляется компанией \textit{DigiFabster}. Интерфейс системы приведен на рисунке \ref{fig:digi_homepage}.
 
 Данная система соответствует современным стандартам \textit{CRM} и \textit{ERP} для аддитивного производства. Имеются вкладки под аналитику продаж, управление очередью печати (\textit{Order Queue}), складской учет филамента и мониторинг принтеров.
@@ -85,6 +93,8 @@
 Именно наличие мощного аналитического блока делает подобные системы ценными для бизнеса, подтверждая необходимость выделения роли Аналитика (\textit{Analyst}) в проектируемой системе.
 
 Недостатком данной системы для малого бизнеса является её высокая стоимость и избыточность функционала (например, интеграция с почтовыми службами доставки США), что делает её внедрение в небольшой студии нецелесообразным. Однако архитектурные принципы разделения ролей и учета ресурсов, заложенные в \textit{DigiFabster}, будут взяты за основу при проектировании серверной части (\textit{backend}) нашей АИС.
+
+\subsubsection{} Выводы по анализу аналогов
 
 На основе проведенного анализа можно сделать вывод, что идеальная АИС для студии \textit{3D}-печати должна сочетать в себе:
 \begin{itemize}
