--- a/note/sections/01_03_task_setting.tex
+++ b/note/sections/01_03_task_setting.tex
@@ -49,13 +49,15 @@
     \item управление личным профилем.
 \end{itemize}
 
-\textbf{Масштабируемость и перспективы.}
-Архитектура проектируемой системы закладывается с учетом возможности дальнейшего расширения. В частности, использование \textit{REST API} на базе фреймворка \textit{Ktor} позволяет в будущем, в рамках дипломного проектирования, разработать кроссплатформенное мобильное приложение (для \textit{iOS} и \textit{Android}), использующее уже существующий бэкенд и модели. Это обеспечит омниканальный доступ к услугам студии без необходимости переработки серверной части.
+\subsubsection{} Архитектура проектируемой системы закладывается с учетом возможности дальнейшего расширения. В частности, использование \textit{REST API} на базе фреймворка \textit{Ktor} позволяет в будущем, в рамках дипломного проектирования, разработать кроссплатформенное мобильное приложение (для \textit{iOS} и \textit{Android}), использующее уже существующий бэкенд и модели. Это обеспечит омниканальный доступ к услугам студии без необходимости переработки серверной части.
 
 Аппаратная платформа относится к физическим компонентам системы, которые необходимы для запуска программного обеспечения. Требования к серверной части включают наличие достаточных вычислительных мощностей для обработки запросов к базе данных и выполнения бизнес-логики.
+
 Для устройств (клиентских и рабочих станций сотрудников), на которых будет работать веб-приложение, рекомендуется использовать процессор с частотой не менее 1.6 ГГц, ОЗУ 4 ГБ и более, место на жестком диске (или SSD) не менее 20 ГБ. Видеоадаптер должен поддерживать современные стандарты вывода графики для корректного отображения интерфейса и (в перспективе) предпросмотра \textit{3D}-моделей. Эти требования направлены на обеспечение оптимальной производительности и отзывчивости интерфейса.
 
-Программная платформа относится к совокупности программного обеспечения, обеспечивающего среду запуска.
+\subsubsection{} Программная платформа относится к совокупности программного обеспечения, обеспечивающего среду запуска.
+
 Серверная часть приложения разрабатывается для кроссплатформенной среды \textit{JVM}, что позволяет развертывать её на операционных системах \textit{Linux} (ядро 4.15+), \textit{Windows Server} или \textit{macOS}.
+
 Клиентская часть (веб-интерфейс) поддерживает работу в современных браузерах: \textit{Google Chrome}, \textit{Mozilla Firefox}, \textit{Safari} или \textit{Microsoft Edge}. Требуется поддержка стандартов \textit{HTML5}, \textit{CSS3} и \textit{JavaScript (ES6+)} для обеспечения корректной работы динамических элементов управления заказами и графиков аналитики.
 
