--- a/note/sections/02_01_design_db.tex
+++ b/note/sections/02_01_design_db.tex
@@ -20,6 +20,8 @@
 
 В общем, проектирование базы данных в организации требует соблюдения ключевых принципов, чтобы обеспечить эффективное управление информацией и поддерживать высокое качество принимаемых решений на её основе [1].
 
+\subsubsection{} Описание структуры базы данных
+
 В данной спроектированной базе данных можно выделить следующие сущности, которые в совокупности составляют логическую схему АИС студии 3D-печати, более подробно опишем их составляющие.
 
 Сущность «Пользователь» (\textit{UserTable}) является центральным элементом системы и хранит данные всех действующих лиц (клиентов, сотрудников, администраторов). В отличие от раздельного хранения, здесь используется единая таблица с разграничением прав доступа через атрибут роли. Перечень атрибутов:
@@ -114,66 +116,8 @@
 
 Для реализации связей между основными сущностями используются внешние ключи, что обеспечивает целостность данных и устранение избыточности. Более детальное описание атрибутов, взаимосвязей между сущностями и их взаимодействия представлено на логической схеме базы данных.
 
+\subsubsection{} Логическая схема базы данных
+
 Более детальное описание атрибутов, взаимосвязей между сущностями и их взаимодействия представлено на логической схеме базы данных, показанной на рисунке \ref{fig:logical_db_schema}.
 
 Логическая схема включает таблицы с атрибутами, которые отражают сущности, связанные с процессом тестирования клиентов, а также промежуточные таблицы, предназначенные для связи этих сущностей. В каждой таблице указаны атрибуты, которые служат индикаторами конкретных записей и выполняют роль первичных ключей. Для связывания таблиц используются внешние ключи.
-
-Приложение построено по клиент-серверной архитектуре, где функциональные обязанности разделены между двумя основными компонентами: клиентской и серверной частями. Клиентская часть представляет собой пользовательский интерфейс, который обеспечивает взаимодействие пользователя с системой, в то время как серверная часть  отвечает за обработку запросов, выполнение бизнес-логики и управление данными приложения.
-
-Клиентская часть собирает запросы пользователя (клиента, тренера или администратора) и передает их на сервер через сеть. Серверная часть, реализованная с использованием шаблона \textit{Entity}-\textit{Boundary}-\textit{Control}, обрабатывает эти запросы с помощью \textit{сontrol}-объектов, выполняет необходимые операции с данными в системе управления базами данных (СУБД) через \textit{entity}-объекты и отправляет результаты обратно на клиентскую сторону. Вся коммуникация между клиентом и сервером осуществляется с помощью протокола \textit{HTTP}, что обеспечивает стандартное и надежное взаимодействие.
-
-Дополнительно, серверная часть, включающая control-объекты для реализации бизнес-логики, может включать элементы кэширования для повышения производительности и быстродействия приложения. Также обязательна реализация механизмов аутентификации и авторизации по ролям для контроля доступа, что повышает безопасность системы. В процессе взаимодействия могут использоваться различные методы оптимизации, такие как сжатие данных или асинхронная обработка запросов, что способствует более эффективной работе с большим объемом информации, например, при загрузке полного расписания или аналитических отчетов.
-
-Диаграммы вариантов использования служат для отображения взаимосвязей между группами вариантов использования и участниками, которые принимают участие в процессе. Эти диаграммы помогают наглядно представить, как различные элементы системы взаимодействуют между собой, а также показывают, какие действия выполняются в рамках каждого варианта использования.
-
-Основные элементы диаграммы включают участников и варианты использования. Участник – это роль или набор ролей, выполняемых субъектом при взаимодействии с системой или её компонентами (например, с подсистемами или классами). Участником может быть как человек, так и другая система, подсистема или класс, которые представляют внешние объекты или субъекты по отношению к сущности системы.
-
-Вариант использования представляет собой описание группы действий, выполняемых в системе с точки зрения участника, и направленных на достижение определённого результата. Эти варианты описывают типичные взаимодействия между пользователем и системой, а также отображают внешний интерфейс системы. Они отвечают на вопрос, что система должна сделать, а не как это должно быть реализовано.
-
-Диаграмма вариантов использования может включать дополнительные элементы, такие как системные границы, комментарии и атрибуты для вариантов использования. Также на диаграмме могут быть указаны различные типы связей, например, связь между участником и вариантом использования, которая демонстрирует, какие функции бизнес-системы могут быть использованы субъектом. 
-
-Ассоциация – это связь между двумя элементами модели, например, между участником и вариантом использования. Она описывает причину связи и управляющие ею правила. Ассоциация указывает на то, что участник может использовать определённые функциональные возможности системы.
-
-Отношение обобщения – это связь, в которой один элемент модели (дочерний) основан на другом (родительском). В контексте диаграмм вариантов использования отношение обобщения означает, что дочерний элемент наследует все атрибуты, операции и отношения родительского элемента. Это позволяет моделировать общие и частные варианты использования.
-
-Отношение включения – это связь, в которой один вариант использования (базовый) включает в себя функциональные возможности другого варианта использования (вариант использования включения). Это отношение способствует повторному использованию функциональности, предотвращая дублирование описания схожих действий.
-
-Отношение расширения – указывает на то, что один вариант использования (расширение) добавляет дополнительные действия или поведение к другому варианту использования (базовому). Это помогает раскрыть детали о системе, которые обычно скрыты в базовом варианте использования, расширяя функциональные возможности системы.
-
-В АИС студии 3\textit{D}-печати \textit{KawunPrint} можно выделить следующие действующие лица: неавторизованный пользователь, клиент, сотрудник, аналитик и администратор.
-
-Исходя из потребностей действующих лиц, выделяются следующие варианты использования:
-\begin{itemize}
-    \item авторизоваться в системе;
-    \item зарегистрироваться;
-    \item ввести или обновить личные данные в профиле;
-    \item подтвердить \textit{Email} с помощью проверочного кода;
-    \item выйти из системы;
-    \item создать заказ на 3D-печать;
-    \item загрузить файлы 3D-моделей (интеграция с \textit{Firebase Storage});
-    \item просмотреть список и историю своих заказов;
-    \item просмотреть детализацию изменений статусов заказа;
-    \item просмотреть список всех заказов (для сотрудника и аналитика);
-    \item изменить статус заказа (например, перевести в «Печать» или «Готов»);
-    \item списать расходные материалы (\textit{Filament}) под конкретный заказ;
-    \item добавить или удалить тип пластика;
-    \item управление запасами филамента (добавление катушек, учет остатков);
-    \item управление парком принтеров (добавление, редактирование, списание);
-    \item изменить статус активности принтера (включен/выключен);
-    \item вести журнал истории обслуживания принтеров;
-    \item просмотреть список всех зарегистрированных пользователей;
-    \item назначить роль пользователю (\textit{Admin}, \textit{Employee}, \textit{Analyst});
-    \item просмотреть финансовую статистику и отчеты;
-    \item просмотреть статистику загрузки файлов и использования дискового пространства;
-    \item прямое администрирование файлов в облачном хранилище;
-    \item удалить пользователя или ошибочные данные из БД.
-\end{itemize}
-
-Диаграмма вариантов использования АИС студии 3\textit{D}-печати \textit{KawunPrint} представлена на рисунке \ref{fig:usecase}.
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=0.5\textwidth]{attachments/usecade_diagram.png}
-    \caption{Диаграмма вариантов использования АИС студии 3D-печати \textit{KawunPrint}}
-    \label{fig:usecase}
-\end{figure}
